Sutter Health/src/objects/MU_Object__c.object
<CustomObject>
    <description>MU Object : Proxy object for Case records</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>MU Objects</relationshipLabel>
        <relationshipName>MU_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>MU comments proxy field</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Escalation_Status__c</fullName>
        <label>Escalation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cannot send documents to Provider</fullName>
                </value>
                <value>
                    <fullName>Send Documents To Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Proxy field for Case Status field on SOC Case layout</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Cannot Reach</fullName>
                </value>
                <value>
                    <fullName>Closed (Closed)</fullName>
                </value>
                <value>
                    <fullName>Escalate to Meaningful Use</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MU Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Comments__c</columns>
        <columns>Escalation_Status__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MU-{000000}</displayFormat>
        <label>MU Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MU Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>